---------------------------------------------------------------------------
Version 5.5.3  [DEVEL] (rgerhards), 2010-02-??
- added capability to turn off standard LF delimiter in TCP server
  via new directive "$InputTCPServerDisableLFDelimiter on"
- bugfix: failed to compile on systems without epoll support
- bugfix: comment char ('#') in literal terminated script parsing
  and thus could not be used.
  but tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=119
  [merged in from v3.22.2]
- imported patches from 4.6.0:
  * improved testbench to contain samples for totally malformed messages
    which miss parts of the message content
  * bugfix: some malformed messages could lead to a missing LF inside files
    or some other missing parts of the template content.
  * bugfix: if a message ended immediately with a hostname, the hostname
    was mistakenly interpreted as TAG, and localhost be used as hostname
---------------------------------------------------------------------------
Version 5.5.2  [DEVEL] (rgerhards), 2010-02-05
- applied patches that make rsyslog compile under Apple OS X.
  Thanks to trey for providing these.
- replaced data type "bool" by "sbool" because this created some
  portability issues.
- added $Escape8BitCharactersOnReceive directive
  Thanks to David Lang for suggesting it.
- worked around an issue where omfile failed to compile on 32 bit platforms
  under some circumstances (this smells like a gcc problem, but a simple
  solution was available). Thanks to Kenneth Marshall for some advice.
- extended testbench
---------------------------------------------------------------------------
Version 5.3.8  [BETA] (rgerhards), 2010-02-??
- bugfix: omruleset failed to work in many cases
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=179
  Thanks to Ryan B. Lynch for reporting this issue.
- bugfix: comment char ('#') in literal terminated script parsing
  and thus could not be used.