@@ -10,6 +10,8 @@ source $srcdir/diag.sh nettester parse3 udp
 source $srcdir/diag.sh nettester parse3 tcp
 source $srcdir/diag.sh nettester parse_invld_regex udp
 source $srcdir/diag.sh nettester parse_invld_regex tcp
+source $srcdir/diag.sh nettester parse-3164-buggyday udp
+source $srcdir/diag.sh nettester parse-3164-buggyday tcp
 
 echo \[parsertest.sh]: redoing tests in IPv4-only mode
 source $srcdir/diag.sh nettester parse1 udp -4
@@ -22,4 +24,6 @@ source $srcdir/diag.sh nettester parse3 udp -4
 source $srcdir/diag.sh nettester parse3 tcp -4
 source $srcdir/diag.sh nettester parse_invld_regex udp -4
 source $srcdir/diag.sh nettester parse_invld_regex tcp -4
+source $srcdir/diag.sh nettester parse-3164-buggyday udp -4
+source $srcdir/diag.sh nettester parse-3164-buggyday tcp -4
 source $srcdir/diag.sh exit
